Only warn the user about conditions that are not met

When loaded from a plugin, we printed a warning about setting the
application attribute Qt::AA_ShareOpenGLContexts and choosing OpenGLRhi
as the scene graph renderer interface even when those conditions were
already met.

This patch checks if these conditions are already met before printing
the warning.

Change-Id: Iee06fa4560e022f0611f07a082513dc91c8065c9
Fixes: QTBUG-103958
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 9e5214e617471b326cc975095054f859924b4168)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>