src/core/api/qtwebenginecoreglobal.cpp
@@ -197,7 +197,10 @@ static void initialize()
 #if QT_CONFIG(opengl)
   if (QCoreApplication::instance()) {
     // On window/ANGLE, calling QtWebEngineQuick::initialize from DllMain will result in a crash.
-    if (!qt_gl_global_share_context()) {
+    if (!qt_gl_global_share_context() &&
+        !(QCoreApplication::testAttribute(Qt::AA_ShareOpenGLContexts) &&
+          QQuickWindow::graphicsApi() == QSGRendererInterface::OpenGLRhi)
+       ) {
       qWarning("Qt WebEngine seems to be initialized from a plugin. Please "
                "set Qt::AA_ShareOpenGLContexts using QCoreApplication::setAttribute and "
                "QSGRendererInterface::OpenGLRhi using QQuickWindow::setGraphicsApi "
